--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@ h2{
     line-height: 1.5;
 }
 
+.name{
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 1.5;
+}
+
 .container-fluid2{
     padding: 3% 15%;
 }
